--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
-
+img{
+  width: 200px;
+  height: 300px;
+}
 .favorite{
   width:50px;
   height:50px;
