Css file for Favourites page

--- a/src/pages/Movies/Movies.module.css
+++ b/src/pages/Movies/Movies.module.css
@@ -47,6 +47,10 @@ h1{
 .movie img{
     padding: 7px;
 }
+img{
+  width: 200px;
+  height: 300px;
+}
 .movie:hover {
     transform: scale(1.05);     
     box-shadow: 0 8px 20px rgba(0,0,0,0.5);    
@@ -55,3 +59,4 @@ h1{
 .title{
     margin: 10px;
 }
+
